Smashset Commands (#2)
* Start work on stage striking etc. infrastructure

* Formatting

* Validate ruleset

* Continue work on ruleset infrastructure

* Small detail in phrasing

* Nonnull

* Start working on RPS component

* Fix failed interaction

* Finish making RPS a component

* Make BlindPick a component

* Some Progress on rulesets

* First buggy pass on stage strike command

* Some fixes and improvement in stage striking

* Remove duplicate code

* Fix technically legal 0 sized starterStrikePatterns

* RPSCommand edit on timeout

* timeout for StrikeStages

* Small changes, display "stage" and "stages" at correct times

* Add todo note

* Add all rulesets in https://help.smash.gg/en/articles/2552379-smash-ultimate-online-rulesets

* Move some utilities to more reasonable places

* Ability to cancel ButtonActionMenu

* Formatting

* todos, some help, allow more args for getTwoUserArgs

* remove outdated todo

* Implement ruleset choice, lay groundwork for RPS in StrikeStagesCommand

* RPS for strike stages (but still buggy)

* Fix some stuff for stage striking

* Acknowledge interaction

* Choice to strike first or second

* Changes to avoid deprecation, update JDA

* Fix double acknowledgement

* StrikeStagesComponent now creates all messages

* Multiple ActionRows in case of > 5 buttons

* Fix multiple ActionRows for button edit

* Fix fix for multiple ActionRows for button edit

* duplicate code

* StrikeStages help

* Handle timeouts for StrikeStages properly

* Start work on ReportGameComponent

* Clear up some more merge artefacts

* make getTwoUserArgs preserve User objects

* Adapt StrikeStagesCommand for slash commands

* Formatter, mostly optimize imports from merge artefacts

* Progress on ReportGameComponent

* Minor formatting

* Remove SmashSet from StrikeStagesComponent

We can strike on the SmashSet after StrikeStagesComponent completes ourselves.
